# fast-server

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
requirements/: base.in  base.txt  dev.in  dev.txt  prod.txt
src/frontend/: .gitignore  .prettierignore  package.json  pnpm-lock.yaml
src/frontend/src/pages/: index.astro
