[project]
name = "fast-server"
dynamic = ["version"]
description = "A small server with fastapi, jinja2 template and react+tailwind styling  "
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Sumanth Kashyap", email = "sumanth.bhi@gmail.com" },
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--ignore=docs_src",
]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true